# GES-EIS-toolbox

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: tests.yml
API/: api_circuit.html  api_database.html  api_machine_learning.html  api_spectra.html  api_utils_and_exceptions.html
_sources/: api.md
_sources/API/: api_database.md
docs/: _config.yml  _toc.yml  intro.md
docs/API/: api_circuit.md  api_machine_learning.md  api_spectra.md  api_utils_and_exceptions.md
src/eis_toolbox/: utils.py
src/eis_toolbox/circuit/: circuit_string.py
src/ges_eis_toolbox/: exceptions.py
src/ges_eis_toolbox/circuit/: circuit_string.py  equivalent_circuit.py
src/ges_eis_toolbox/database/: data_entry.py  experiment.py  generator.py
src/ges_eis_toolbox/machine_learning/: analysis_tools.py  dataset_creator.py  noise.py
src/ges_eis_toolbox/spectra/: spectrum.py
tests/unit/: test_circuit_string.py  test_data_entry.py  test_equivalent_circuit.py  test_generator.py  test_spectrum.py  test_utils.py
