[metadata]
name = ges-eis-toolbox
description = A simple toolbox to analyze electrochemical impedance spectroscopy data
author = Pierpaolo Pravatto
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ges_eis_toolbox
    ges_eis_toolbox.circuit
install_requires =
    numpy
    scipy
    matplotlib
    impedance>=1.4.1

python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
